[workspace]

members = [
    "example-crates/hello_world/run",
    "example-crates/hello_world/run_http",
    "example-crates/hello_world/guest",
    "example-crates/bitmex/guest",
    "example-crates/bitmex/run",
    "crates/carol_guest",
    "crates/carol_host",
    "crates/carol_guest_derive",
    "crates/carol_core",
    "crates/carol",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
wit-bindgen = { version = "0.4", features = ['default'] }
wasmtime = { version = "7", features = ["component-model"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
bincode = {  version = "2.0.0-rc.3", features = ["serde"] }
carol_guest = { path = "crates/carol_guest" }
carol_host = { path = "crates/carol_host" }
carol_guest_derive = { path = "crates/carol_guest_derive" }
carol = { path = "crates/carol" }
carol_core =  { path = "crates/carol_core" }
reqwest = {  version = "0.11.16", features = ["json"] }
clap = {  version = "4", features = ["derive"] }
anyhow = "1"
futures-core = "0.3"
tracing = "0.1"
