[package]
name = "carol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hyper = { version = "0.14", features = ["server", "http2", "tcp", "http1"] }
tokio = {  version = "1", features = ["full"] }
serde = { workspace = true }
serde_yaml = "0.9"
tracing = "0.1"
clap = {  version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
carol_host = { workspace = true }
carol_core = { workspace = true }
bincode = { workspace = true }
