[package]
name = "carol_guest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { workspace = true }
carol_bls = { workspace = true }
bincode = {  workspace = true }
carol_guest_derive = { workspace = true }
serde_json = { workspace = true }
http = { version = "0.2.9", default-features = false }
serde = { workspace = true }
carol_core = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = [ "blocking" ] }


[features]
default = ["std"]
std = []
