[package]
name = "carol_guest"
version = "0.1.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { workspace = true }
carol_bls = { workspace = true }
bincode = {  workspace = true }
carol_guest_derive = { workspace = true }
serde_json = { workspace = true }
http_crate = { workspace = true }
serde = { workspace = true }
carol_core = { workspace = true }
serde_urlencoded = { version = "0.7.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = [ "blocking" ] }


[features]
default = ["std"]
std = []
