[package]
name = "carol_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { workspace = true }
carol_bls = { workspace = true }
reqwest = {  version = "0.11.16", features = ["rustls-tls"], default-features = false }
http_crate = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
rand = "0.8"
tracing = { workspace = true }
carol_core = { workspace = true }
hyper = { workspace = true }
