[package]
name = "carol_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carol_core.workspace = true
serde.workspace = true
hyper.workspace = true
carol_bls.workspace = true
bech32.workspace = true

[features]
default = [ "std" ]
std = []
