[package]
name = "bitmex_guest"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/carol-computer/carol"
homepage = "https://github.com/carol-computer/carol/example-crates/bitmex"

[features]
network_tests = []

[dependencies]
carol_guest = { workspace = true }
bincode = { workspace = true }
time = { version = "0.3", features = ["std", "serde-human-readable", "macros", "parsing"] }
url = "2"
serde_json = "1"
serde = {  version = "1", features = ["derive"] }
