[package]
name = "hello_world_run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carol_host = { workspace = true }
anyhow = { workspace = true }
hello_world = { path = "../guest" }
bincode = { workspace = true }
