[package]
name = "hello_world_run_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_world = { path = "../guest" }
bincode = { workspace = true }
tokio = { version = "1", features = ["full"] }
anyhow = { workspace = true }
clap = { workspace = true }
carol_core = { workspace = true }
reqwest = { workspace = true }
